--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,11 +12,13 @@
   --color-slate-600: #475569;
   --color-slate-700: #334155;
   --color-slate-800: #1e293b;
+  --color-slate-850: #0b1121;
   --color-slate-900: #0f172a;
   
   --color-teal-300: #5eead4;
   --color-teal-400: #2dd4bf;
   --color-teal-900: #134e4a;
+  --color-teal-975: #134e4a;
 }
 
 html {
@@ -24,8 +26,8 @@ html {
 }
 
 body {
-  background-color: var(--color-slate-900);
-  color: var(--color-slate-300);
+  background-color: var(--color-slate-950);
+  color: var(--color-slate-400);
   line-height: 1.625;
   -webkit-font-smoothing: antialiased;
 }
